samples/_failures_safe/1761520336_68f82e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0fea38a5.c: In function ‘main’:
./samples/SAFE/__tmp_0fea38a5.c:153:36: error: expected ‘)’ at end of input
  153 |             if (scanf("%d", &rows1)
      |                ~                   ^
      |                                    )
./samples/SAFE/__tmp_0fea38a5.c:153:13: error: expected declaration or statement at end of input
  153 |             if (scanf("%d", &rows1)
      |             ^~
./samples/SAFE/__tmp_0fea38a5.c:153:13: error: expected declaration or statement at end of input
